# middleware/swagger.json
@@ -8,35 +8,24 @@
   "host": "localhost:8080",
   "basePath": "/",
   "schemes": [
-    "http",
-    "https"
+    "http"
   ],
+  "securityDefinitions": {
+    "auth0": {
+      "type": "oauth2",
+      "flow": "implicit",
+      "in": "header",
+      "name": "Authorization",
+      "authorizationUrl": "https://dev-4qlbmsi47ra8ygmw.us.auth0.com/authorize?audience=https://library.media.com",
+      "tokenUrl": "https://dev-4qlbmsi47ra8ygmw.us.auth0.com/oauth/token?audience=https://library.media.com"
+    }
+  },
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/games": {
-      "get": {
-        "tags": [
-          "Games"
-        ],
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/movies/": {
       "get": {
+        "tags": [
+          "Movies"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -45,22 +34,79 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       },
       "post": {
+        "tags": [
+          "Movies"
+        ],
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "releaseDate": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "director": {
+                  "example": "any"
+                },
+                "studio": {
+                  "example": "any"
+                },
+                "cast": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "rating": {
+                  "example": "any"
+                },
+                "duration": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       }
     },
     "/movies/{id}": {
       "get": {
+        "tags": [
+          "Movies"
+        ],
         "description": "",
         "parameters": [
           {
@@ -77,9 +123,17 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       },
       "put": {
+        "tags": [
+          "Movies"
+        ],
         "description": "",
         "parameters": [
           {
@@ -87,6 +141,42 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "releaseDate": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "director": {
+                  "example": "any"
+                },
+                "studio": {
+                  "example": "any"
+                },
+                "cast": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "rating": {
+                  "example": "any"
+                },
+                "duration": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -96,9 +186,17 @@
           "400": {
             "description": "Bad Request"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       },
       "delete": {
+        "tags": [
+          "Movies"
+        ],
         "description": "",
         "parameters": [
           {
@@ -115,7 +213,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       }
     },
     "/books/": {
@@ -131,7 +234,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       },
       "post": {
         "tags": [
@@ -180,7 +288,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       }
     },
     "/books/{id}": {
@@ -207,7 +320,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       },
       "put": {
         "tags": [
@@ -265,7 +383,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -290,7 +413,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       }
     },
     "/music/": {
@@ -306,7 +434,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       },
       "post": {
         "tags": [
@@ -349,7 +482,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       }
     },
     "/music/{id}": {
@@ -376,7 +514,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       },
       "put": {
         "tags": [
@@ -428,7 +571,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -453,7 +601,144 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
+      }
+    },
+    "/games/": {
+      "post": {
+        "tags": [
+          "Games"
+        ],
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
+      },
+      "get": {
+        "tags": [
+          "Games"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
+      }
+    },
+    "/games/{id}": {
+      "get": {
+        "tags": [
+          "Games"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
+      },
+      "put": {
+        "tags": [
+          "Games"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "Games"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "auth0": []
+          }
+        ]
       }
     }
   }
